--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.55.0"
   },
   "browserslist": [
